--- a/easyvolunteer/templates/main.html
+++ b/easyvolunteer/templates/main.html
@@ -1,15 +1,17 @@
 {% extends 'layout.html' %}
 {% load staticfiles%}
 
-{% block content %}
-메인 페이지
-<p><a href="{% url 'introduce' %}">introduce</a></p>
-<p><a href="{% url 'select' %}">select</a></p>
-<p><a href="{% url 'organ_signup' %}">organ_signup</a></p>
-<p><a href="{% url 'user_signup' %}">user_signup</a></p>
-<p><a href="{% url 'login' %}">login</a></p>
-<p><a href="{% url 'mypage' %}">mypage</a></p>
-<p><a href="{% url 'register' %}">register</a></p>
-<p><a href="{% url 'quest' %}">quest</a></p>
-<p><a href="{% url 'point' %}">point</a></p>
-{% endblock %}
+{% block main %}
+<div class="container h-100">
+        <div class="row h-100 align-items-center justify-content-center text-center">
+          <div class="col-lg-10 align-self-end">
+            <h1 class="text-uppercase text-white font-weight-bold">쉬봉 sheevong  easy volunteer</h1>
+            <hr class="divider my-4">
+          </div>
+          <div class="col-lg-8 align-self-baseline">
+            <p class="text-white-75 font-weight-light mb-5">aaaaaaaaaaaaaaaaaaaaa</p>
+            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+          </div>
+        </div>
+      </div>
+{% endblock %} 
