--- a/easyvolunteer/templates/modify.html
+++ b/easyvolunteer/templates/modify.html
@@ -32,7 +32,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">쉬봉</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -52,6 +52,6 @@
       </div>
     </div>
   </nav>
-  <h3>퀘스트 페이지</h3>
+  <h3>개인정보 수정 페이지</h3>
 </body>
 </html>
