--- a/easyvolunteer/templates/situation.html
+++ b/easyvolunteer/templates/situation.html
@@ -27,7 +27,7 @@
 
 </head>
 
-<body id="page-top">
+<body id="spage">
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
@@ -52,6 +52,35 @@
       </div>
     </div>
   </nav>
-  <h3>나의현황 페이지</h3>
-</body>
-</html>
+
+<div class="lay">
+  <!--유저 사진-->
+  <article class="user"><a img class="brand_img" src="{% static 'img/6365.png_860.png'%}"  ></a><div class="brand_name"> 유저 이름</div></article>
+  <!--유저 레벨현황-->
+  <!--유저 봉사기록-->
+
+</div>
+
+
+  <footer class="bg-light py-5">
+      <div class="container">
+        <div class="small text-center text-muted">Copyright &copy; 2019 - Start Bootstrap</div>
+      </div>
+    </footer>
+  
+    <!-- Bootstrap core JavaScript -->
+    <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
+    <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+  
+    <!-- Plugin JavaScript -->
+    <script src="{% static 'vendor/jquery-easing/jquery.easing.min.js' %}"></script>
+    <script src="{% static 'vendor/magnific-popup/jquery.magnific-popup.min.js' %}"></script>
+  
+    <!-- Custom scripts for this template -->
+    <script src="{% static 'js/creative.min.js' %}"></script>
+  
+  </body>
+  
+  </html>
+  
+
