--- a/easyvolunteer/templates/modify.html
+++ b/easyvolunteer/templates/modify.html
@@ -32,26 +32,63 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">쉬봉</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto my-2 my-lg-0">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">소개</a>
+            <a class="nav-link js-scroll-trigger" href="#">소개</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="{% url 'mypage' %}">MY Page</a>
+            <a class="nav-link js-scroll-trigger" href="#">MY Page</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio">로그인/회원가입</a>
+            <a class="nav-link js-scroll-trigger" href="#">로그인</a>
           </li>
-        
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#">회원가입</a>
+          </li>
         </ul>
       </div>
     </div>
   </nav>
-  <h3>개인정보 수정 페이지</h3>
-</body>
-</html>
+  
+  <!-- section -->
+  <section class="page-section" id="services">
+    <div class="container">
+      <!-- 개인정보수정 페이지의 경로를 알려주는 alerts -->
+      <div class="modify_nav">
+        <a href="{% url 'mypage' %}">마이페이지</a> > <a href="{% url 'modify' %}">개인정보수정</a>
+      </div>
+      <hr class="modify_hr1">
+      <!-- 개인정보수정 폼 들어갈 곳-->
+      <div class="modify_button">
+          <a class="btn btn-primary btn-xl js-scroll-trigger" id="login_button" href="#">취소</a><!-- 개인정보수정 취소버튼 -->
+          <a class="btn btn-primary btn-xl js-scroll-trigger" id="login_button" href="#">수정완료</a><!-- 개인정보수정 완료버튼 -->
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+<footer class="bg-light py-5">
+    <div class="container">
+      <div class="small text-center text-muted">Copyright &copy; 2019 - Start Bootstrap</div>
+    </div>
+  </footer>
+  
+  <!-- Bootstrap core JavaScript -->
+  <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
+  <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+  
+  <!-- Plugin JavaScript -->
+  <script src="{% static 'vendor/jquery-easing/jquery.easing.min.js' %}"></script>
+  <script src="{% static 'vendor/magnific-popup/jquery.magnific-popup.min.js' %}"></script>
+  
+  <!-- Custom scripts for this template -->
+  <script src="{% static 'js/creative.min.js' %}"></script>
+  
+  </body>
+  
+  </html>
