--- a/easyvolunteer/templates/point.html
+++ b/easyvolunteer/templates/point.html
@@ -27,12 +27,12 @@
 
 </head>
 
-<body id="page-top">
+<body id="spage">
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">쉬봉</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -52,6 +52,48 @@
       </div>
     </div>
   </nav>
-  <h3>포인트 페이지</h3>
-</body>
-</html>
+
+  <div class="lay">
+      <!-- <div class="point_complete">
+          결제가 완료되었습니다!
+          <br>
+           잔여 포인트는 800point 입니다  
+          
+      </div> -->
+      <div class="alert alert-secondary" role="alert">
+          결제가 완료되었습니다!
+          <br>
+           잔여 포인트는 800point 입니다
+        </div>
+     
+         
+        </div>
+      
+     
+      
+  </div>
+  
+ 
+
+
+  <footer class="bg-light py-5">
+      <div class="container">
+        <div class="small text-center text-muted">Copyright &copy; 2019 - Start Bootstrap</div>
+      </div>
+    </footer>
+  
+    <!-- Bootstrap core JavaScript -->
+    <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
+    <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+  
+    <!-- Plugin JavaScript -->
+    <script src="{% static 'vendor/jquery-easing/jquery.easing.min.js' %}"></script>
+    <script src="{% static 'vendor/magnific-popup/jquery.magnific-popup.min.js' %}"></script>
+  
+    <!-- Custom scripts for this template -->
+    <script src="{% static 'js/creative.min.js' %}"></script>
+  
+  </body>
+  
+  </html>
+  
