nav 요소들 변경함, html 연결함

--- a/easyvolunteer/templates/main.html
+++ b/easyvolunteer/templates/main.html
@@ -15,3 +15,60 @@
         </div>
       </div>
 {% endblock %} 
+    </head>
+<section class="page-section bg-primary" id="about">
+    <div class="introduce_page">
+      <h2 class="text-white mt-0">ABOUT</h2>
+      <div class="about_container1">
+          <img id=about_introdce_img src="#">
+          <p id="about_introduce_write">쉬봉소개</p>
+      </div>
+      <div class="about_container2">
+        <div class="about_introduce">
+          <div><img class="about_introduce_img" src="#"></div>
+          <div><p class="about_introduce_write">조영민</p></div>
+        </div>
+        <div class="about_introduce">
+          <div><img class="about_introduce_img" src="#"></div>
+          <div><p class="about_introduce_write">김명석</p></div>
+        </div>
+        <div class="about_introduce">
+          <div><img class="about_introduce_img" src="#"></div>
+          <div><p class="about_introduce_write">신정은</p></div>
+        </div>
+        <div class="about_introduce">
+          <div><img class="about_introduce_img" src="#"></div>
+          <div><p class="about_introduce_write">윤다혜</p></div>
+        </div>
+        <div class="about_introduce">
+          <div><img class="about_introduce_img" src="#"></div>
+          <div><p class="about_introduce_write">뿌꾸</p></div>
+        </div>
+      </div>
+      
+    </div>
+</section>
+
+
+
+<!-- Footer -->
+<footer class="bg-light py-5">
+<div class="container">
+<div class="small text-center text-muted">Copyright &copy; 2019 - Start Bootstrap</div>
+</div>
+</footer>
+
+<!-- Bootstrap core JavaScript -->
+<script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
+<script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+
+<!-- Plugin JavaScript -->
+<script src="{% static 'vendor/jquery-easing/jquery.easing.min.js' %}"></script>
+<script src="{% static 'vendor/magnific-popup/jquery.magnific-popup.min.js' %}"></script>
+
+<!-- Custom scripts for this template -->
+<script src="{% static 'js/creative.min.js' %}"></script>
+
+</body>
+
+</html>
