--- a/easyvolunteer/templates/layout.html
+++ b/easyvolunteer/templates/layout.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load staticfiles%}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <link rel="icon" type="image/gif/png" href="{%static 'img/logo.jpg'%}">
+
   <title>쉬봉</title>
 
   <!-- Font Awesome Icons -->
@@ -27,7 +27,7 @@
 
 </head>
 
-<body id="page-top">
+<body id="spage">
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
@@ -39,14 +39,20 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto my-2 my-lg-0">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">소개</a>
+            <a class="nav-link js-scroll-trigger" href="{% url 'quest' %}">퀘스트 목록</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#services">MY Page</a>
+            <a class="nav-link js-scroll-trigger" href="{% url 'brands' %}">포인트 사용처</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">로그인/회원가입</a>
+              <a class="nav-link js-scroll-trigger" href="{% url 'mypage' %}">MY Page</a>
+            </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="{% url 'login' %}">로그인</a>
           </li>
+          <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="{% url 'select' %}">회원가입</a>
+            </li>
         
         </ul>
       </div>
