--- a/easyvolunteer/templates/quest_what.html
+++ b/easyvolunteer/templates/quest_what.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load staticfiles%}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -13,7 +13,7 @@
 
   <!-- Font Awesome Icons -->
   <link href="{% static 'vendor/fontawesome-free/css/all.css' %}" rel="stylesheet" type="text/css">
-  <link href="{% static 'css/quest_what.css' %}" rel="stylesheet" type="text/css">
+  <link href="{% static 'css/shev.css' %}" rel="stylesheet" type="text/css">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
@@ -28,36 +28,41 @@
 </head>
 
 
-
-        <!-- Navigation -->
-        <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
-          <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">쉬봉</a>
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-              <ul class="navbar-nav ml-auto my-2 my-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link js-scroll-trigger" href="#about">소개</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link js-scroll-trigger" href="#services">MY Page</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link js-scroll-trigger" href="#contact">로그인/회원가입</a>
-                </li>
-              
-              </ul>
-            </div>
-          </div>
-        </nav>
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
+    <div class="container">
+      <a class="navbar-brand js-scroll-trigger" href="{% url 'main' %}">쉬봉</a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto my-2 my-lg-0">
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="{% url 'quest' %}">퀘스트 목록</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="{% url 'brands' %}">포인트 사용처</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="{% url 'mypage' %}">MY Page</a>
+            </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="{% url 'login' %}">로그인</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="{% url 'select' %}">회원가입</a>
+            </li>
+        
+        </ul>
+      </div>
+    </div>
+  </nav>
      <div class="Quest_lay">
 
             <section class="home_banner_area">
                     <div class="banner_inner">
                         <div class="container">
-                            <div class="row align-items-center justify-content-between">
+                            <div class="mainn">
                                 <div class="col-lg-6">
                                     <!--봉사활동 내용-->
                                     <div class="about">
@@ -74,46 +79,47 @@
                                         <a class="primary_btn" href="#"><span>See My Work</span></a> <!--------------**********************여기도************-->
                                     </div>
                                 </div>
+                                <div class="betweennnnnnnnn"></div><!--사진 배열 밀리기위해 일부러함 상관 X-->
                                 <div class="col-lg-4">
-                                    <div class="imggg">
-                                        <img class="quest_what_img" src="img/연탄.jpg" alt="">
-                                    </div>
+                                   
+                                    <img class="quest_what_img" src="{% static 'img/연탄.jpg'%}" alt="">
+                                    
                                 </div>
                             </div>
                         </div>
                     </div>
+                    
                 </section>
                 <!--================ End Home Banner Area =================-->
             
                 <!--================ Start Statistics Area =================-->
-                <section class="statistics_area">
-                    <div class="container">
+                
                         <div class="detail_1">
                             <!--참여 가능한 레벨-->
-                            
+
                                 <div class="term">
-                                    <h3><span class="counter"></span>LV.1 이상</h3>
-                                    <p>참여 가능 레벨</p>
+                                <h3><span class="counter"></span>LV.1 이상</h3>
+                                <p>참여 가능 레벨</p>
                                 </div>
-                            </div>
+                                
                             <!--예상 소요시간  -->
                            
                                 <div class="term">
                                     <h3><span class="counter"></span>3 hours</h3>
                                     <p>예상 소요시간</p>
                                 </div>
-                            </div>
+                            
                             <!--제공 포인트  -->
                             
                                 <div class="term">
                                     <h3><span class="counter"></span>170 POINT</h3>
                                     <p>제공 포인트</p>
                                 </div>
-                            
+                         
+                                
                         </div>
-                    </div>
-                </section>
-            
+                    
+        
 
 </div>
 <!-- Footer -->
