--- a/easyvolunteer/static/css/creative.css
+++ b/easyvolunteer/static/css/creative.css
@@ -486,10 +486,10 @@ mark,
   content: "\2014\00A0";
 }
 
-.img-fluid {
+/* .img-fluid {
   max-width: 2500px;
   height: 250px;
-}
+} */
 
 .img-thumbnail {
   padding: 0.25rem;
