--- a/easyvolunteer/static/css/quest.css
+++ b/easyvolunteer/static/css/quest.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: 'BMHANNAPro';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_seven@1.0/BMHANNAPro.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
 .Quest_lay{
     margin-top: 120px;
     margin-left: 50px;
@@ -11,6 +17,8 @@
     height: 800px;
     margin-left: 100px;
 }
+
+
 .product {
     display: block;
     width: 100%;
@@ -21,21 +29,39 @@
     -webkit-transition: all 0.3s ease;
     -ms-transition: all 0.3s ease;
     transition: all 0.3s ease;
-    border: 1px solid #f0f0f0; }
+    border: 2px solid rgb(135, 133, 133); }
+
     @media (max-width: 991.98px) {
       .product {
         margin-bottom: 30px; } }
 
     .quest_img{
-        width: 10rem;
-        height: 10rem;
+        width: 15.6rem;
+        height: 20rem;
+        
     } 
+
+    .quest_img:after { /* 이미지 안쪽으로 그림자 효과 주기 */
+      position: absolute;
+      display: block;
+      content: "";
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      box-shadow: inset 0 0 50px rgba(0, 0, 0, 0.5),
+          inset 0 0 100px rgba(0, 0, 0, 1);
+  }
     .product .img-prod {
       position: relative;
       display: block;
-      overflow: hidden; }
-      .product .img-prod .overlay {
+      overflow: hidden;
+      width: 80rem;
+      height: 20rem;
+     }
+      .product .img-prod .overlay . {
         height: 230px;
+        width: 15.6rem;
         position: absolute;
         top: 0;
         left: 0;
