--- a/easyvolunteer/static/css/quest_what.css
+++ b/easyvolunteer/static/css/quest_what.css
@@ -1,15 +1,27 @@
+@font-face {
+    font-family: 'BMHANNAPro';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_seven@1.0/BMHANNAPro.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+  }
+
 .Quest_lay{
     margin-top: 120px;
     margin-left: 50px;
     margin-right: 50px;
     height: 1500px;
     width: 1400px;
+
+}
+.about{
+    font-family: 'BMHANNAPro';
 }
 
 .home_banner_area{
     padding-top: 20px;
-    background-color: hsl(36, 40%, 90%);   
+    background-color: hsl(36, 40%, 90%);    
     border-radius: 10px;
+    font-family: 'BMHANNAPro' !important;
 }
 /*맨 위 봉사설명 + 봉사 사진 틀*/
 .mainn{
@@ -25,7 +37,7 @@
 /*사진 배열 밀리기위해 일부러함 상관*/
 .betweennnnnnnnn{
     align-self: stretch;
-    flex: 10 0 5px;
+    flex: 0 0 0px;
 } 
 
 /*사진*/
@@ -39,7 +51,7 @@
     width: 300px;
     height:450px;
     border-radius: 10px;
-    box-shadow: 0px 0px 20px -5px rgba(0, 0, 0, 2.3);
+    box-shadow: 0px 0px 20px -5px rgba(0, 0, 0, 0.3);
    
 }
 
@@ -49,6 +61,7 @@
     display: flex;
     flex-direction: row;
     margin-left: 150px;
+
 }
 
 
