--- a/easyvolunteer/templates/main.html
+++ b/easyvolunteer/templates/main.html
@@ -1,21 +1,88 @@
-{% extends 'layout.html' %}
 {% load staticfiles%}
+<!DOCTYPE html>
+<html lang="en">
 
-{% block main %}
-<div class="container h-100">
-        <div class="row h-100 align-items-center justify-content-center text-center">
-          <div class="col-lg-10 align-self-end">
-            <h1 class="text-uppercase text-white font-weight-bold">쉬봉 sheevong  easy volunteer</h1>
-            <hr class="divider my-4">
-          </div>
-          <div class="col-lg-8 align-self-baseline">
-            <p class="text-white-75 font-weight-light mb-5">aaaaaaaaaaaaaaaaaaaaa</p>
-            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
-          </div>
-        </div>
+<head>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>쉬봉</title>
+
+  <!-- Font Awesome Icons -->
+  <link href="{% static 'vendor/fontawesome-free/css/all.css' %}" rel="stylesheet" type="text/css">
+  <link href="{% static 'css/shev.css' %}" rel="stylesheet" type="text/css">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
+
+  <!-- Plugin CSS -->
+  <link href="{% static 'vendor/magnific-popup/magnific-popup.css' %}" rel="stylesheet">
+
+  <!-- Theme CSS - Includes Bootstrap -->
+  <link href="{% static 'css/creative.css' %}" rel="stylesheet">
+  <style>
+      @font-face {
+         font-family: 'BMHANNAPro';
+         src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_seven@1.0/BMHANNAPro.woff') format('woff');
+         font-weight: normal;
+         font-style: normal;
+       }
+       .font{
+         font-family: 'BMHANNAPro';
+       }
+      </style>
+</head>
+
+<body id="spage font">
+
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3 " id="mainNav">
+    <div class="container">
+      <a class="navbar-brand js-scroll-trigger font" href="{% url 'main' %}"> <p class="font">쉬봉</p></a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto my-2 my-lg-0">
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="{% url 'quest' %}"><p class="font">퀘스트 목록</p></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="{% url 'brands' %}"><p class="font">포인트 사용처</p></a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="{% url 'mypage' %}"><p class="font">MY Page</p></a>
+            </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="{% url 'login' %}"><p class="font">로그인</p></a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="{% url 'select' %}"><p class="font">회원가입</p></a>
+            </li>
+        
+        </ul>
       </div>
-{% endblock %} 
-    </head>
+    </div>
+  </nav>
+  <header class="masthead">
+      <div class="container h-100">
+            <div class="row h-100 align-items-center justify-content-center text-center">
+              <div class="col-lg-10 align-self-end">
+                <h1 class="text-uppercase text-white font-weight-bold font">쉬봉 sheevong  easy volunteer</h1>
+                <hr class="divider my-4">
+              </div>
+              <div class="col-lg-8 align-self-baseline">
+                <p class="text-white-75 font-weight-light mb-5">aaaaaaaaaaaaaaaaaaaaa</p>
+                <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+              </div>
+            </div>
+       </div>
+
+  </head>
 <section class="page-section bg-primary" id="about">
     <div class="introduce_page">
       <h2 class="text-white mt-0">ABOUT</h2>
